packages/rspack/tests/configCases/errors/rspack-issue-4504/errors.js
module.exports = [
	[/Expected 'md4' \| 'xxhash64', received 'abc' at "output.hashFunction"/]
];
